# FurinaDB

./: 4.pptx  CMakeLists.txt  README.md  config.txt  design.txt  file_structure.txt  furinadb.cpp  main.cpp
db/base1/: base1.dbf
db/base2/: base2.dbf
db/tt/: tt.dbf
gui/: DatabaseDetailWindow.cpp  DatabaseDetailWindow.h  LoginWindow.cpp  LoginWindow.h  LoginWindow.ui  MainWindow.cpp  MainWindow.h  Table.cpp  Table.h
include/: furinadb.h
include/database/: bufferpool.h  config.h  database.h  logger.h  page.h  table.h  utils.h
include/sqlcompiler/: rectype.h  sqlmanager.h
log/: normal.txt  redo.txt
src/: furinadb.cpp
src/database/: bufferpool.cpp  config.cpp  database.cpp  logger.cpp  page.cpp  table.cpp
src/sqlcompiler/: sqlmanager.cpp
